@@ -1,3 +1,6 @@
+10/10/2002
+	- When cleaning the cache, catch ConcurrentModificationExceptions.
+
 10/8/2002
 	- Cleanups to Cache.addMessage() and the Credibility code.
 
